--- a/Exercises/1. First exercise.ipynb
+++ b/Exercises/1. First exercise.ipynb
@@ -223,7 +223,7 @@
     "---\n",
     "## 5. Euclidean distance (*)\n",
     "\n",
-    "The Euclideam distance between the points $P_1$ and $P_2$ is the length of a line between them. Let $P_1: (3,5)$ and $P_2: (-2,4)$ and compute the distance between them."
+    "The Euclidean distance between the points $P_1$ and $P_2$ is the length of a line between them. Let $P_1: (3,5)$ and $P_2: (-2,4)$ and compute the distance between them."
    ]
   },
   {
@@ -254,6 +254,55 @@
     "d = math.sqrt(yDist**2 + xDist**2)\n",
     "\n",
     "print(f\"The Euclidean distance between the points is {d:.1f} units.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "## 6. Euclidean distance in 3D (**)\n",
+    "\n",
+    "Calculate the distance between the points $P_1: (2,1,4)$ and $P_2: (3,1,0)$ \n",
+    "\n",
+    "<details> \n",
+    "\n",
+    "<summary>Hint </summary>\n",
+    "\n",
+    "Let $p =(p_1, p_2, p_3)$ and $q = (q_1, q_2, q_3) \\Rightarrow$   \n",
+    "\n",
+    "$d(p,q) = \\sqrt{(p_1-q_1)^2 +(p_2-q_2)^2 +(p_3-q_3)^2 }$, where $d(p,q)$ is the Euclidean distance between $p$ and $q$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The Euclidean distance between the points in 3D space is 4.12 units.\n"
+     ]
+    }
+   ],
+   "source": [
+    "import math\n",
+    "\n",
+    "P1 = (2,1,4)\n",
+    "P2 = (3,1,0)\n",
+    "\n",
+    "# Vertical, Depth and Horizontal distance between the points\n",
+    "zDist = abs(P2[2]-P1[2])\n",
+    "yDist = abs(P2[1]-P1[1])\n",
+    "xDist = abs(P2[0]-P1[0])\n",
+    "\n",
+    "# Distance between points according to pythagorean formula\n",
+    "\n",
+    "d = math.sqrt(zDist**2 + yDist**2 + xDist**2)\n",
+    "\n",
+    "print(f\"The Euclidean distance between the points in 3D space is {d:.2f} units.\")"
    ]
   }
  ],
