Made code a bit more idiomatic

--- a/Exercises/1. First exercise.ipynb
+++ b/Exercises/1. First exercise.ipynb
@@ -80,21 +80,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The accuracy of the algorith is 82 percent.\n"
+      "The accuracy of the algorith is 82%.\n"
      ]
     }
    ],
    "source": [
-    "accuracy = round((300.0/365.0)*100)\n",
+    "accuracy = 300.0/365.0\n",
     "\n",
-    "print(f\"The accuracy of the algorith is {accuracy} percent.\")"
+    "print(f\"The accuracy of the algorith is {accuracy:.0%}.\")"
    ]
   },
   {
@@ -155,14 +155,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The accuracy is 98.7 percent\n"
+      "The accuracy is 98.7%, which I would say is not good enough.\n"
      ]
     }
    ],
@@ -172,9 +172,9 @@
     "FN=11.0\n",
     "TN=985.0\n",
     "\n",
-    "accuracy = ((TP+TN) / (TP + TN + FP + FN))*100\n",
+    "accuracy = ((TP+TN) / (TP + TN + FP + FN))\n",
     "\n",
-    "print(f\"The accuracy is {accuracy:.1f} percent, which I would say is not good enough.\")"
+    "print(f\"The accuracy is {accuracy:.1%}, which I would say is not good enough.\")"
    ]
   },
   {
