--- a/Exercises/001. Counting.ipynb
+++ b/Exercises/001. Counting.ipynb
@@ -18,7 +18,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The hypothenuse of a triangle with the catheti of length 3 and 4 units has the length 5.0.\n"
+      "The hypothenuse of a triangle with the catheti of length 3 and 4 units has the length 5.0 units.\n"
      ]
     }
    ],
@@ -92,7 +92,7 @@
     }
    ],
    "source": [
-    "accuracy = 300.0/365.0\n",
+    "accuracy = 300.0/365.0 # Behöver inte som i C# ange .0. Vill man ha en heltalsdivision anger man // (floor division) istället för / i python.\n",
     "\n",
     "print(f\"The accuracy of the algorith is {accuracy:.0%}.\")"
    ]
@@ -322,7 +322,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.2"
+   "version": "3.10.11"
   },
   "orig_nbformat": 4
  },
