--- a/Code-Along/Demo/007. Lists.ipynb
+++ b/Code-Along/Demo/007. Lists.ipynb
@@ -25,7 +25,8 @@
    "source": [
     "fruits = [\"apple\",\"banana\",\"cherry\"]\n",
     "\n",
-    "print(fruits)\n",
+    "\n",
+    "print(fruits) \n",
     "fruits.append(\"melon\")\n",
     "print(f\"{len(fruits) = }\") # To count number of items in list\n",
     "print(f\"{fruits.count('apple') = }\") # To count occurences of specific item in list\n"
@@ -42,28 +43,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['']\n",
-      "Antal färger du matat in är: 1\n"
+      "['bl', 'flgkldf', 'dflgkdf']\n",
+      "Antal färger du matat in är: 3\n"
      ]
     }
    ],
    "source": [
-    "colors =[\"\"]\n",
+    "colors = []\n",
     "while(True):\n",
     "    color=input(\"Mata in en färg. Avsluta genom att inte ange någonting: \")\n",
-    "    if color == \"\":\n",
+    "    if not color:\n",
     "        print(colors)\n",
     "        print(f\"Antal färger du matat in är: {len(colors)}\")\n",
     "        break\n",
     "    else:\n",
-    "        colors.add(color)"
+    "        colors.append(color)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['svart', 'brun', 'lila', 'rosa']\n",
+      "Antal färger du matat in är: 4\n"
+     ]
+    }
+   ],
+   "source": [
+    "colors = []\n",
+    "\n",
+    "while (input_string := input(\"Add color: \")) and input_string != \"\":\n",
+    "    colors.append(input_string)\n",
+    "\n",
+    "print(colors)\n",
+    "print(f\"Antal färger du matat in är: {len(colors)}\")"
    ]
   }
  ],
