--- a/Code-Along/Demo/010. Dictionaries.ipynb
+++ b/Code-Along/Demo/010. Dictionaries.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -46,7 +46,7 @@
     "        \"email\": [\n",
     "            \"fredrik@everyloop.com\", \n",
     "            \"fredrik@gmail.com\", \n",
-    "            \"fredrik.johansson@hotmail.com\"\n",
+    "            \"fredrik.johansson@hotmail.com\", # Good idea to have a final comma, so as not to miss when adding future values\n",
     "        ]\n",
     "    }\n",
     "}\n",
@@ -74,6 +74,122 @@
     "\n",
     "# Print last item in list in dictionary\n",
     "print(f'{teacher[\"languages\"][-1] = }')\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Get value using key"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      ":(\n"
+     ]
+    }
+   ],
+   "source": [
+    "key = input(\"Enter key: \")\n",
+    "\n",
+    "if key in teacher:\n",
+    "    print(teacher[key])\n",
+    "else:\n",
+    "    print(\":(\")\n",
+    "\n",
+    "# Koden nedan gör exakt samma som detta, dvs mer kompakt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      ":(\n"
+     ]
+    }
+   ],
+   "source": [
+    "key = input(\"Enter key: \")\n",
+    "print(teacher.get(key,\":(\"))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Looping through a dictionary"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "age\n",
+      "languages\n",
+      "contact_info\n",
+      "length\n",
+      "firstname\n",
+      "age\n",
+      "languages\n",
+      "contact_info\n",
+      "length\n",
+      "firstname\n",
+      "42\n",
+      "['python', 'C#', 'JavaScript']\n",
+      "{'phone': '0702354678', 'email': ['fredrik@everyloop.com', 'fredrik@gmail.com', 'fredrik.johansson@hotmail.com']}\n",
+      "1.8\n",
+      "Kalle\n",
+      "\n",
+      "age = 42\n",
+      "languages = ['python', 'C#', 'JavaScript']\n",
+      "contact_info = {'phone': '0702354678', 'email': ['fredrik@everyloop.com', 'fredrik@gmail.com', 'fredrik.johansson@hotmail.com']}\n",
+      "length = 1.8\n",
+      "firstname = Kalle\n",
+      "\n",
+      "age = 42\n",
+      "languages = ['python', 'C#', 'JavaScript']\n",
+      "contact_info = {'phone': '0702354678', 'email': ['fredrik@everyloop.com', 'fredrik@gmail.com', 'fredrik.johansson@hotmail.com']}\n",
+      "length = 1.8\n",
+      "firstname = Kalle\n"
+     ]
+    }
+   ],
+   "source": [
+    "for key in teacher.keys():\n",
+    "    print(key)\n",
+    "\n",
+    "for key in teacher:\n",
+    "    print(key)\n",
+    "\n",
+    "for value in teacher.values():\n",
+    "    print(value)\n",
+    "\n",
+    "print()\n",
+    "\n",
+    "for key in teacher:\n",
+    "    print(f\"{key} = {teacher[key]}\")\n",
+    "\n",
+    "print()\n",
+    "\n",
+    "for key,value in teacher.items():\n",
+    "    print(f\"{key} = {value}\")\n"
    ]
   }
  ],
