Finished some string exercises

--- a/Exercises/05. Strings.ipynb
+++ b/Exercises/05. Strings.ipynb
@@ -194,16 +194,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Ni talar bra latin\n",
-      "Ni talar bra latin nital arb ralat iN\n",
-      "\" Ni talar bra latin\" is not a palindrome\n"
+      "pelle\n",
+      "pelle ellep\n",
+      "\"Pelle\" is not a palindrome\n"
      ]
     }
    ],
@@ -211,7 +211,7 @@
     "sequence = input(\"Enter a sequence of letters to check if it is a palindrome: \")\n",
     "\n",
     "lowered_sequence = sequence.lower()\n",
-    "stripped_sequence = sequence.strip(\" \")\n",
+    "stripped_sequence = lowered_sequence.replace(\" \",\"\")\n",
     "print(stripped_sequence)\n",
     "\n",
     "reversed_list = list(reversed(stripped_sequence))\n",
@@ -222,6 +222,121 @@
     "    print(f'\"{sequence}\" is a palindrome')\n",
     "else:\n",
     "    print(f'\"{sequence}\" is not a palindrome')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "## 6. Vowels (**)\n",
+    "\n",
+    "Count the number of vowels in this sentence: \"Pure mathematics is, in its way, the poetry of logical ideas\"\n",
+    "\n",
+    "<details>\n",
+    "\n",
+    "<summary>Answer</summary>\n",
+    "\n",
+    "```\n",
+    "\n",
+    "There are 22 vowels in this sentence\n",
+    "\n",
+    "```\n",
+    "</details>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The sentence \"Pure mathematics is, in its way, the poetry of logical ideas\" \n",
+      "has 22 vowels in it.\n"
+     ]
+    }
+   ],
+   "source": [
+    "sentence = \"Pure mathematics is, in its way, the poetry of logical ideas\"\n",
+    "vowels=0\n",
+    "\n",
+    "for letter in sentence:\n",
+    "    if letter == 'a' or letter == 'e' or letter == 'i' or letter == 'o' or letter == 'u' or letter == 'y' or letter == 'å' or letter == 'ä' or letter == 'ö':\n",
+    "        vowels +=1\n",
+    "\n",
+    "print(f'The sentence \"{sentence}\" \\nhas {vowels} vowels in it.')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "## 7. Rövarspråket (**)\n",
+    "\n",
+    "Ask the user to input a sentence, and translate it using the formula described in this article:\n",
+    "\n",
+    "https://en.wikipedia.org/wiki/R%C3%B6varspr%C3%A5ket\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "23 0\n",
+      "23 1\n",
+      "23 2\n",
+      "23 3\n",
+      "23 4\n",
+      "23 5\n",
+      "23 6\n",
+      "23 7\n",
+      "23 8\n",
+      "23 9\n",
+      "23 10\n",
+      "23 11\n",
+      "23 12\n",
+      "23 13\n",
+      "23 14\n",
+      "23 15\n",
+      "23 16\n",
+      "23 17\n",
+      "23 18\n",
+      "23 19\n",
+      "23 20\n",
+      "23 21\n",
+      "23 22\n",
+      "DoD-e-tot hoh-ä-ror ä-ror ror-ö-vov-a-ror-sos-pop-ror-å-kok-e-tot\n"
+     ]
+    }
+   ],
+   "source": [
+    "text = input(\"Enter what you want to get translated into Rövarspråket: \")\n",
+    "translated_text = \"\"\n",
+    "\n",
+    "for i, letter in enumerate(text):\n",
+    "    if letter == ' ' and i<len(text)-1:\n",
+    "        translated_text += ' '\n",
+    "    elif letter != 'a' and letter != 'e' and letter != 'i' and letter != 'o' and letter != 'u' and letter != 'y' and letter != 'å' and letter != 'ä' and letter != 'ö':\n",
+    "        if i<len(text)-1:\n",
+    "            translated_text += letter + \"o\" + letter+\"-\"\n",
+    "        else:\n",
+    "            translated_text += letter + \"o\" + letter\n",
+    "    else:\n",
+    "        if i<len(text)-1:\n",
+    "            translated_text += letter+\"-\"\n",
+    "        else:\n",
+    "            translated_text += letter\n",
+    "\n",
+    "print(translated_text.replace('- ',' '))"
    ]
   }
  ],
