Debugging walk through

--- a/Exercises/05. Strings.ipynb
+++ b/Exercises/05. Strings.ipynb
@@ -284,37 +284,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "23 0\n",
-      "23 1\n",
-      "23 2\n",
-      "23 3\n",
-      "23 4\n",
-      "23 5\n",
-      "23 6\n",
-      "23 7\n",
-      "23 8\n",
-      "23 9\n",
-      "23 10\n",
-      "23 11\n",
-      "23 12\n",
-      "23 13\n",
-      "23 14\n",
-      "23 15\n",
-      "23 16\n",
-      "23 17\n",
-      "23 18\n",
-      "23 19\n",
-      "23 20\n",
-      "23 21\n",
-      "23 22\n",
-      "DoD-e-tot hoh-ä-ror ä-ror ror-ö-vov-a-ror-sos-pop-ror-å-kok-e-tot\n"
+      "KoK-a-non dod-u lol-i-sos-tot-a u-tot-?\n"
      ]
     }
    ],
@@ -325,6 +302,8 @@
     "for i, letter in enumerate(text):\n",
     "    if letter == ' ' and i<len(text)-1:\n",
     "        translated_text += ' '\n",
+    "    elif letter == '!' or letter == '?':\n",
+    "        translated_text += letter\n",
     "    elif letter != 'a' and letter != 'e' and letter != 'i' and letter != 'o' and letter != 'u' and letter != 'y' and letter != 'å' and letter != 'ä' and letter != 'ö':\n",
     "        if i<len(text)-1:\n",
     "            translated_text += letter + \"o\" + letter+\"-\"\n",
