Finished string exercises

--- a/Exercises/05. Strings.ipynb
+++ b/Exercises/05. Strings.ipynb
@@ -317,6 +317,64 @@
     "\n",
     "print(translated_text.replace('- ',' '))"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "## 8. Encryption (**)\n",
+    "\n",
+    "Let the user input a word and: \n",
+    "\n",
+    "&nbsp; a) &nbsp; encrypt the message by replacing each letter with the next letter. If the letter is in the end of the alphabet, use the first letter instead. \n",
+    "\n",
+    "e.g. in Swedish: \"höst\" $\\rightarrow$ \"iatu\"\n",
+    "\n",
+    "&nbsp; b) &nbsp; decrypt the message\n",
+    "\n",
+    "&nbsp; c) &nbsp; let the user choose either encryption or decryption."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "höst\n"
+     ]
+    }
+   ],
+   "source": [
+    "choice = input(\"Decrypt (d) or encrypt message (e)?: \")\n",
+    "if choice == 'e':\n",
+    "    to_encrypt = input(\"Enter message to encrypt: \")\n",
+    "    encrypted = \"\"\n",
+    "\n",
+    "    for letter in to_encrypt:\n",
+    "        if letter == 'ö':\n",
+    "            encrypted = encrypted + 'a'\n",
+    "        else:\n",
+    "            encrypted = encrypted + chr(ord(letter) + 1)\n",
+    "\n",
+    "    print(encrypted)\n",
+    "elif choice == 'd':\n",
+    "    to_decrypt = input(\"Enter message to decrypt: \")\n",
+    "    decrypted = \"\"\n",
+    "\n",
+    "    for letter in to_decrypt:\n",
+    "        if letter == 'a':\n",
+    "            decrypted = decrypted + 'ö'\n",
+    "        else:\n",
+    "            decrypted = decrypted + chr(ord(letter) - 1)\n",
+    "    print(decrypted)\n",
+    "else:\n",
+    "    print(\"Invalid choice\")"
+   ]
   }
  ],
  "metadata": {
