Finished functions exercises

--- a/Exercises/05. Strings.ipynb
+++ b/Exercises/05. Strings.ipynb
@@ -338,18 +338,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "höst\n"
+      "ökkö\n"
      ]
     }
    ],
    "source": [
+    "# Limited to Swedish alphabet by design \n",
+    "\n",
     "choice = input(\"Decrypt (d) or encrypt message (e)?: \")\n",
     "if choice == 'e':\n",
     "    to_encrypt = input(\"Enter message to encrypt: \")\n",
