Print number using words

--- a/Exercises/06. Functions.ipynb
+++ b/Exercises/06. Functions.ipynb
@@ -278,39 +278,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The value 42394820 gives the change:\n",
+      "The value 1234 gives the change:\n",
       "\n",
-      "42394 1000-lapp\n",
-      "1 500-lapp\n",
+      "1 1000-lapp\n",
       "1 200-lapp\n",
-      "1 100-lapp\n",
-      "1 20-lapp\n"
+      "1 20-lapp\n",
+      "1 10-krona\n",
+      "2 2-krona\n"
      ]
     }
    ],
    "source": [
     "def change(number: int):\n",
-    "    currency_list = [1000,500,200,100,50,20,10,5,2,1]\n",
-    "    currency_names =[\"1000-lapp\", \"500-lapp\", \"200-lapp\", \"100-lapp\",\"50-lapp\",\"20-lapp\",\"10-krona\",\"5-krona\",\"2-krona\",\"1-krona\"]\n",
+    "\n",
+    "    currency_dict = {\n",
+    "        1000: \"1000-lapp\",\n",
+    "        500: \"500-lapp\",\n",
+    "        200: \"200-lapp\",\n",
+    "        100: \"100-lapp\",\n",
+    "        50: \"50-lapp\",\n",
+    "        20: \"20-lapp\",\n",
+    "        10: \"10-krona\",\n",
+    "        5: \"5-krona\",\n",
+    "        2: \"2-krona\",\n",
+    "        1: \"1-krona\"\n",
+    "    }\n",
     "\n",
     "    print(f\"The value {number} gives the change:\\n\")\n",
     "\n",
-    "    for i, currency in enumerate(currency_list):\n",
+    "    for currency, currency_name in currency_dict.items():\n",
     "        j = 1\n",
     "        count=0\n",
     "        while (float(number)/(currency*j)) >= 1:\n",
     "            count += 1\n",
     "            j +=1\n",
     "        if count:\n",
-    "            print(f\"{count} {currency_names[i]}\")\n",
-    "        number -= count*currency_list[i]\n",
+    "            print(f\"{count} {currency_name}\")\n",
+    "        number -= count*currency\n",
     "\n",
     "number = input(\"Enter value to get in change: \")\n",
     "change(int(number))\n"
