Started file exercises

--- a/Exercises/07. Collections.ipynb
+++ b/Exercises/07. Collections.ipynb
@@ -249,14 +249,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "forty two thousand five hundred sixty seven "
+      "thirty four thousand five hundred twenty three "
      ]
     }
    ],
@@ -306,18 +306,18 @@
     "            wordify_number(count)\n",
     "            recurse=1\n",
     "        if count > 1 and recurse == 0:\n",
-    "            print(f\"{count} {base_name}\",end=\" \")\n",
+    "            print(f\"{count} {base_name}\", end=\" \")\n",
     "        elif count > 1 and recurse == 1:\n",
     "            print(f\"{base_name}\",end=\" \")\n",
     "        elif count == 1:\n",
     "            if base_name == 'thousand' or base_name == 'hundred':\n",
-    "                print(f\"{count} {base_name}\",end=\" \")\n",
+    "                print(f\"{count} {base_name}\", end=\" \")\n",
     "            else:    \n",
     "                print(f\"{base_name}\",end=\" \")\n",
     "        number -= count*base\n",
     "\n",
     "number = input(\"Enter value to see pronounciation: \")\n",
-    "wordify_number(int(number))\n"
+    "words = wordify_number(int(number))\n"
    ]
   }
  ],
