Finished 2nd file handling exercise

--- a/Exercises/08. File handling.ipynb
+++ b/Exercises/08. File handling.ipynb
@@ -71,7 +71,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# b) \n",
+    "# b) NOT FINISHED\n",
     "import csv\n",
     "\n",
     "students = []\n",
@@ -191,6 +191,110 @@
     "```\n",
     "\n",
     "</details>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Names sorted alphabetically:\n",
+      "\n",
+      "Adam Gustafsson 25\n",
+      "BjÃ¶rn BjÃ¶rnsson 39\n",
+      "Bose Bosseson 32\n",
+      "Ella Ester 41\n",
+      "Emil Johansson 23\n",
+      "Emma Boden 32\n",
+      "Erik Eriksson 31\n",
+      "Fredrika Ulven 10\n",
+      "Gore Bord 55\n",
+      "Hanna Karlsson 23\n",
+      "HÃ¥kan HÃ¥kanson 24\n",
+      "Ida HÃ¥kansson 23\n",
+      "Jakob Kallander 65\n",
+      "Johan Johansson 42\n",
+      "Jonas Jonasson 31\n",
+      "Karl Karlsson 32\n",
+      "Ove Karlsten 41\n",
+      "Sven Erik Karlsson 13\n",
+      "Sven Erik Lundin 39\n"
+     ]
+    }
+   ],
+   "source": [
+    "# b)\n",
+    "\n",
+    "content = []\n",
+    "line=1\n",
+    "file_path = \"..\\\\data\\\\test_result.txt\"\n",
+    "print(\"Names sorted alphabetically:\")\n",
+    "\n",
+    "with open(file_path) as file:\n",
+    "    while line:\n",
+    "        line = file.readline().strip()\n",
+    "        content.append(line.strip())\n",
+    "\n",
+    "content.sort()\n",
+    "\n",
+    "for c in content:\n",
+    "    print(c)\n",
+    "\n",
+    "with open(file_path,\"a\") as file: \n",
+    "    file.writelines(\"\\n\\nAlphabetically Sorted: \")\n",
+    "with open(file_path,\"a\") as file: \n",
+    "    file.writelines([\" \\n\" + name for name in content if name!=\"\"])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# c)\n",
+    "\n",
+    "grades = {\n",
+    "    \"F\": [0,19],\n",
+    "    \"E\": [20,29],\n",
+    "    \"D\": [30,39],\n",
+    "    \"C\": [40,49],\n",
+    "    \"B\": [50,59],\n",
+    "    \"A\": [60,69],\n",
+    "}\n",
+    "\n",
+    "splitted_content = []\n",
+    "for c in content:\n",
+    "    if c!=\"\":\n",
+    "        splitted_content.append(c.split(\" \"))\n",
+    "sorted_data = sorted(splitted_content, key=lambda x: x[-1])\n",
+    "\n",
+    "with open(file_path,\"a\") as file: \n",
+    "    file.writelines(\"\\n\\nGraded Results: \")\n",
+    "\n",
+    "previous_grade = None\n",
+    "\n",
+    "for result in sorted_data:\n",
+    "    score = int(result[-1])\n",
+    "    assigned_grade = None\n",
+    "\n",
+    "    for grade, grade_range in grades.items():\n",
+    "        lower_bound, upper_bound = grade_range\n",
+    "        if lower_bound <= score <= upper_bound:\n",
+    "            assigned_grade = grade\n",
+    "            break\n",
+    "\n",
+    "    if assigned_grade != previous_grade:\n",
+    "        with open(file_path,\"a\") as file: \n",
+    "            file.writelines(\"\\n \" + \"Grade: \" + assigned_grade)\n",
+    "    with open(file_path,\"a\") as file: \n",
+    "        result_str = \" \".join(result)\n",
+    "        file.writelines(\"\\n \" + result_str)\n",
+    "    previous_grade = assigned_grade"
    ]
   }
  ],
