Finished file handling exercises

--- a/Code-Along/Demo/014. Debugging.ipynb
+++ b/Code-Along/Demo/014. Debugging.ipynb
@@ -49,6 +49,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Miniuppgift\n",
     "Skriv ut sekvensesr ur en sträng, där första tecknet i sekvensen är en siffra, och den sista är samma siffra, avbryt om det kommer en bokstav. Skriv ut hela sekvensen, men skriv ut den funna sekvensen med annan färg. En ny rad för varje färg. "
    ]
   },
