Finally finished the Monty Hall Problem

--- a/Exercises/04. Lists.ipynb
+++ b/Exercises/04. Lists.ipynb
@@ -624,7 +624,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
@@ -633,18 +633,49 @@
      "text": [
       "My choice is to change to the other door, as in the first case \n",
       "the probability of getting it right is 1/3, \n",
-      "but after the snake left it is now 1/2.\n",
+      "but after the snake left it is now 1/2. (Or so I thought)\n",
       "\n",
-      "Rights in staying: None\n"
+      "10 runs\n",
+      "===========\n",
+      "Rights in staying: 4\n",
+      "Rights in switching: 6\n",
+      "\n",
+      "100 runs\n",
+      "===========\n",
+      "Rights in staying: 39\n",
+      "Rights in switching: 61\n",
+      "\n",
+      "1,000 runs\n",
+      "===========\n",
+      "Rights in staying: 338\n",
+      "Rights in switching: 662\n",
+      "\n",
+      "10,000 runs\n",
+      "===========\n",
+      "Rights in staying: 3,236\n",
+      "Rights in switching: 6,764\n",
+      "\n",
+      "100,000 runs\n",
+      "===========\n",
+      "Rights in staying: 33,145\n",
+      "Rights in switching: 66,855\n",
+      "\n",
+      "1,000,000 runs\n",
+      "===========\n",
+      "Rights in staying: 333,545\n",
+      "Rights in switching: 666,455\n",
+      "\n"
      ]
     }
    ],
    "source": [
-    "# Nytt försök\n",
+    "# Nytt försök, Monty Hall problem\n",
     "\n",
     "import random\n",
     "\n",
-    "print(\"My choice is to change to the other door, as in the first case \\nthe probability of getting it right is 1/3, \\nbut after the snake left it is now 1/2.\\n\")\n",
+    "print(\"\"\"My choice is to change to the other door, as in the first case \n",
+    "the probability of getting it right is 1/3, \n",
+    "but after the snake left it is now 1/2. (Or so I thought)\\n\"\"\")\n",
     "\n",
     "# Randomizes the animals behind the doors\n",
     "\n",
@@ -653,28 +684,42 @@
     "    random.shuffle(random_animals)\n",
     "    return random_animals\n",
     "\n",
-    "staying_rights=0\n",
-    "n=10\n",
+    "n=1000000\n",
     "results = []\n",
     "\n",
     "def get_results_for_n(n):\n",
-    "    doors=get_doors()\n",
-    "    chosen_door=random.randint(0,2)\n",
-    "    #snake leaves\n",
-    "    while(True):\n",
-    "        leaving_snake=random.randint(0,2)\n",
-    "        if doors[leaving_snake] == \"snake\" and leaving_snake != chosen_door:\n",
-    "            doors.pop(leaving_snake)\n",
-    "            chosen_door -=1\n",
-    "            break\n",
-    "    #staying\n",
-    "    if doors[chosen_door] == \"rabbit\":\n",
-    "        staying_rights +=1\n",
-    "        return staying_rights\n",
+    "    staying_rights=0\n",
+    "    for i in range(n):\n",
+    "        doors=get_doors()\n",
+    "        chosen_door=random.randint(0,2)\n",
+    "        # # host shows one of the snakes\n",
+    "        # if chosen_door==0:\n",
+    "        #     if doors[1]==\"snake\":\n",
+    "        #         not_available_door=1\n",
+    "        #     else:\n",
+    "        #         not_available_door=2\n",
+    "        # elif chosen_door==1:\n",
+    "        #     if doors[0]==\"snake\":\n",
+    "        #         not_available_door=0\n",
+    "        #     else:\n",
+    "        #         not_available_door=2\n",
+    "        # elif chosen_door==2:\n",
+    "        #     if doors[1]==\"snake\":\n",
+    "        #         not_available_door=1\n",
+    "        #     else:\n",
+    "        #         not_available_door=0\n",
     "\n",
-    "results.append(get_results_for_n(n))\n",
+    "        if doors[chosen_door] == \"rabbit\":\n",
+    "            staying_rights +=1\n",
+    "    return staying_rights\n",
+    "\n",
+    "for i in range(1,7):\n",
+    "    results.append(get_results_for_n(10**i))\n",
     "for j, result in enumerate(results):\n",
-    "    print(f\"Rights in staying: {results[j]}\")"
+    "    print(f\"{10**(j+1):,} runs\")\n",
+    "    print(f\"{'':=^11}\")\n",
+    "    print(f\"Rights in staying: {results[j]:,}\")\n",
+    "    print(f\"Rights in switching: {10**(j+1)-results[j]:,}\\n\")\n"
    ]
   }
  ],
