--- a/Exercises/08. File handling.ipynb
+++ b/Exercises/08. File handling.ipynb
@@ -558,7 +558,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -590,7 +590,7 @@
     "        results[n-1].append(random.randint(1,6))\n",
     "    n += 1\n",
     "\n",
-    "# Store count at end of list\n",
+    "# Store count, probability in dict\n",
     "for i, r in enumerate(results):\n",
     "    j=1\n",
     "    while j <= 6:\n",
@@ -605,6 +605,42 @@
     "            count = results_dict[i][j][str(j+1)][0]\n",
     "            probability = results_dict[i][j][str(j+1)][1]\n",
     "            file.write(f\"{j+1}'s: Count - {count}, Probability - {probability}\\n\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Optimized version of the above, by ChatGPT\n",
+    "\n",
+    "import random\n",
+    "\n",
+    "results = {}\n",
+    "\n",
+    "# Toss the dice 10^n times, store results in separate list for each run\n",
+    "for n in range(1, 7):\n",
+    "    rolls = []\n",
+    "    for _ in range(10**n):\n",
+    "        rolls.append(random.randint(1, 6))\n",
+    "    \n",
+    "    results[n] = {\n",
+    "        face: {\n",
+    "            'count': rolls.count(face),\n",
+    "            'probability': rolls.count(face) / len(rolls)\n",
+    "        }\n",
+    "        for face in range(1, 7)\n",
+    "    }\n",
+    "\n",
+    "# Open a file for writing\n",
+    "with open('..\\\\data\\\\simulation.txt', 'w') as file:\n",
+    "    for n, data in results.items():\n",
+    "        file.write(f\"\\nNumber of rolls: {10**n}\\n\")\n",
+    "        for face, info in data.items():\n",
+    "            count = info['count']\n",
+    "            probability = info['probability']\n",
+    "            file.write(f\"{face}'s: Count - {count}, Probability - {probability}\\n\")\n"
    ]
   }
  ],
