--- a/Code-Along/Demo/020. Numpy.ipynb
+++ b/Code-Along/Demo/020. Numpy.ipynb
@@ -514,6 +514,195 @@
     "print(f\"{x.max() = }\")\n",
     "print(f\"{x.mean() = }\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Multi-dimensional arrays"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([  4,  14,   8,  12,   6,  12, 134,  16,  20])"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "array_1d = np.array([4, 14, 8, 12, 6, 12, 134, 16, 20]) \n",
+    "array_1d"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[  4,  14,   8,  12],\n",
+       "       [  6,  12, 134,  16]])"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "array_2d = np.array([[4, 14, 8, 12],[6, 12, 134, 16]]) \n",
+    "array_2d"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[2, 6, 4, 1],\n",
+       "       [5, 8, 0, 2],\n",
+       "       [8, 6, 7, 7],\n",
+       "       [3, 4, 3, 7],\n",
+       "       [3, 6, 3, 5]])"
+      ]
+     },
+     "execution_count": 75,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Specify size (and dimensionality) of array by passing a list\n",
+    "random_2d = np.random.randint(0,10,[5,4])\n",
+    "random_2d"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[[9, 7, 4, 6, 5, 6],\n",
+       "        [7, 4, 5, 8, 1, 0],\n",
+       "        [9, 7, 2, 8, 8, 1],\n",
+       "        [4, 7, 4, 2, 2, 1]],\n",
+       "\n",
+       "       [[4, 6, 0, 9, 3, 6],\n",
+       "        [9, 3, 7, 7, 2, 2],\n",
+       "        [3, 5, 3, 6, 7, 4],\n",
+       "        [7, 6, 1, 6, 3, 4]],\n",
+       "\n",
+       "       [[3, 1, 1, 4, 7, 8],\n",
+       "        [7, 8, 0, 7, 5, 2],\n",
+       "        [2, 0, 8, 1, 5, 3],\n",
+       "        [2, 8, 3, 0, 4, 6]],\n",
+       "\n",
+       "       [[6, 9, 7, 4, 6, 6],\n",
+       "        [3, 8, 0, 9, 9, 2],\n",
+       "        [2, 2, 9, 2, 5, 6],\n",
+       "        [3, 8, 7, 2, 6, 2]],\n",
+       "\n",
+       "       [[9, 6, 8, 4, 1, 6],\n",
+       "        [4, 7, 9, 5, 0, 4],\n",
+       "        [3, 8, 2, 1, 9, 0],\n",
+       "        [4, 5, 9, 4, 7, 7]]])"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Specify size (and dimensionality) of array by passing a list\n",
+    "random_3d = np.random.randint(0,10,[5,4,6])\n",
+    "random_3d"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Slicing of 2D array"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[6 4 8 4]\n",
+      " [0 8 8 4]\n",
+      " [7 7 8 9]\n",
+      " [8 8 3 1]\n",
+      " [4 8 6 4]]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "8"
+      ]
+     },
+     "execution_count": 67,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Indexing in a 2D-array [x,y] position\n",
+    "print(random_2d)\n",
+    "random_2d[-1, 1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0 0 0 8 8]\n",
+      "[[0 0 0]\n",
+      " [0 0 0]\n",
+      " [0 0 0]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Slicing in a 2D-array\n",
+    "# All rows, column 1\n",
+    "print(random_2d[:,1])\n",
+    "\n",
+    "# First 3 rows, from second column \n",
+    "print(random_2d[:3, 1:])\n",
+    "\n",
+    "# You can also assign values with slices\n",
+    "random_2d[:3, 1:] = 0"
+   ]
   }
  ],
  "metadata": {
