Test on git on VS Code in phone

--- a/Exercises/05. Strings.ipynb
+++ b/Exercises/05. Strings.ipynb
@@ -15,16 +15,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Letters in the word 'Kookaburra12': 12\n",
+      "Letters in the word 'Mikael': 6\n",
       "Uppercase letters: 1\n",
-      "Lowercase letters: 9\n"
+      "Lowercase letters: 5\n"
      ]
     }
    ],
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
