Code Along 22: Properties

--- a/Code-Along/Demo/021. OOP Basics.ipynb
+++ b/Code-Along/Demo/021. OOP Basics.ipynb
@@ -101,14 +101,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'name': 'Misse', 'age': 3}\n"
+      "Hello, my name is Misse, and I am 3 years old\n",
+      "Hi Kisse, my name is Misse, and I'm 1 years older than you\n",
+      "Hi Mjau, my name is Kisse, and I'm 3 years younger than you\n",
+      "Hi Mjau, my name is Laban, and we are both 5 years old\n",
+      "Hi, my name is Misse, and my best friend is Kisse\n",
+      "Hi, my name is Kisse, and my best friend is Misse\n",
+      "Hi, my name is Mjau, and I have no best friend, but I'm cool anyway\n",
+      "Hi, my name is Laban, and I have no best friend, but I'm cool anyway\n"
      ]
     }
    ],
@@ -117,10 +124,44 @@
     "    def __init__(self, name, age):\n",
     "        self.name = name\n",
     "        self.age = age\n",
+    "        self.best_friend = None\n",
     "\n",
-    "my_cat = Cat(\"Misse\", 3)\n",
+    "    def greet(self, other_cat=None):\n",
+    "        \n",
+    "        if other_cat:\n",
+    "            print(f\"Hi {other_cat.name}, my name is {self.name}, and \",end=\"\")\n",
+    "            if other_cat.age < self.age:\n",
+    "                print(f\"I'm {self.age-other_cat.age} years older than you\")\n",
+    "            elif other_cat.age == self.age:\n",
+    "                print(f\"we are both {self.age} years old\")\n",
+    "            else:\n",
+    "                print(f\"I'm {other_cat.age-self.age} years younger than you\")\n",
+    "        else:\n",
+    "            print(f\"Hello, my name is {self.name}, and I am {self.age} years old\")\n",
+    "    def print_best_friend(self):\n",
+    "        if self.best_friend:\n",
+    "            print(f\"Hi, my name is {self.name}, and my best friend is {self.best_friend.name}\")\n",
+    "        else:\n",
+    "            print(f\"Hi, my name is {self.name}, and I have no best friend, but I'm cool anyway\")\n",
+    "        \n",
     "\n",
-    "print(my_cat.__dict__)"
+    "# Put similar objects in lists. You don't want a plethora of variables.\n",
+    "cats = []\n",
+    "cats.append(Cat(\"Misse\", 3))\n",
+    "cats.append(Cat(\"Kisse\", 2))\n",
+    "cats.append(Cat(\"Mjau\", 5))\n",
+    "cats.append(Cat(\"Laban\", 5))\n",
+    "\n",
+    "cats[0].best_friend = cats[1]\n",
+    "cats[1].best_friend = cats[0]\n",
+    "\n",
+    "cats[0].greet()\n",
+    "cats[0].greet(cats[1])\n",
+    "cats[1].greet(cats[2])\n",
+    "cats[3].greet(cats[2])\n",
+    "\n",
+    "for cat in cats:\n",
+    "    cat.print_best_friend()"
    ]
   }
  ],
